fix to bad \ in Makefile.am
git-svn-id: https://svn.o-hand.com/repos/matchbox/trunk/matchbox-common@658 b067294f-1dea-0310-9683-c47a78595994

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,4 +1,5 @@
 xpms =  mbadd.xpm   mbfolder.xpm      mbnoapp.xpm   mbup.xpm \
+        mbdown.xpm  mbfolderprev.xpm  mbremove.xpm
 
 pngs = mbadd.png   mbfolder.png      mbnoapp.png   mbup.png \
        mbdown.png  mbfolderprev.png  mbremove.png
