juggled wrong pkgdatadir getting defined
git-svn-id: https://svn.o-hand.com/repos/matchbox/trunk/matchbox-common@664 b067294f-1dea-0310-9683-c47a78595994

--- a/data/vfolders-desktop/Makefile.am
+++ b/data/vfolders-desktop/Makefile.am
@@ -7,6 +7,6 @@ desktop_files = \
 EXTRA_DIST = $(desktop_files)
 
 if !WANT_PDA_FOLDERS
-  vfoldersdir = $(pkgdatadir)/vfolders
+  vfoldersdir = $(datadir)/matchbox/vfolders
   vfolders_DATA = $(desktop_files)
 endif
