Add snapshot target to makefile
git-svn-id: https://svn.o-hand.com/repos/matchbox/trunk/matchbox-common@770 b067294f-1dea-0310-9683-c47a78595994

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,6 @@ SUBDIRS = data icons
 EXTRA_DIST = matchbox-session
 
 bin_SCRIPTS = matchbox-session
+
+snapshot:
+	$(MAKE) dist distdir=$(PACKAGE)-snap`date +"%Y%m%d"`
