--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS=blondie
+
 xpms =  mbadd.xpm   mbfolder.xpm      mbnoapp.xpm   mbup.xpm \
         mbdown.xpm  mbfolderprev.xpm  mbremove.xpm
 
