2007-04-13  Matthew Allum  <mallum@openedhand.com>
        * data/vfolders-pda/Makefile.am:
        * data/vfolders-pda/PIM.directory:
        * data/vfolders-pda/Root.order:
        Add PIM directory (for matchbox-desktop-2)

git-svn-id: https://svn.o-hand.com/repos/matchbox/trunk/matchbox-common@1516 b067294f-1dea-0310-9683-c47a78595994

--- a/data/vfolders-pda/Makefile.am
+++ b/data/vfolders-pda/Makefile.am
@@ -1,5 +1,6 @@
 desktop_files = Applications.directory \
                 Games.directory        \
+                PIM.directory          \
                 Other.directory        \
                 Root.directory         \
                 Settings.directory     \
